--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -36,12 +36,16 @@ body {
     @include clearfix();
 }
 
+.row {
+    display: flex;
+    @include clearfix();
+}
 
 /* All columns should float to the left */
 .col {
     float: left;
-    min-height: 300px;
     padding: 1em;
+    flex: 1;
 }
 
 .pull-left {
