--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -9,6 +9,10 @@
   }
 }
 
+$success-color: #3c763d;
+$error-color: #a94442;
+$warning-color: #8a6d3b;
+
 /* apply a natural box layout model to all elements, but allowing components to change */
 /* https://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
 html {
@@ -42,15 +46,57 @@ body {
 .col {
     float: left;
     padding: 1em;
-    flex: 1;
+    /* All columns should have the same height but allow for different widths */
+    flex: 1 1 auto;
 }
-
 .pull-left {
     float: left;
 }
 
 .pull-right {
     float: right;
+}
+
+.img-circle{
+  border-radius: 50%;
+}
+
+.text-success {
+  color: $success-color;
+}
+
+.text-error {
+  color: $error-color;
+}
+
+.text-warning {
+  color: $warning-color;
+}
+
+.message {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
+  margin: 0 0 1em;
+  color: #333;
+}
+
+.success {
+  @extend .message;
+  border-color: $success-color;
+  color: $success-color;
+}
+
+.error {
+  @extend .message;
+  border-color: $error-color;
+  color: $error-color;
+}
+
+.warning {
+  @extend .message;
+  border-color: $warning-color;
+  color: $warning-color;
 }
 
 /* Reset list elements for navigation */
@@ -117,14 +163,16 @@ nav.top-nav a,
 
 /* The left and right columns will have the same width */
 #Sidebar {
-    width: 440px;
+    width: 340px;
     background: #cdcdcd;
+    @extend .col;
 }
 
 /* The middle column will have a fixed width of the remainder of the wrapper */
 #Content {
-    width: 730px;
+    width: 830px;
     background: #fff;
+    @extend .col;
 }
 
 #Footer {
@@ -138,4 +186,15 @@ nav.top-nav a,
 #Footer ul[role="navigation"] {
   @extend .nav-inline;
   @extend .pull-right;
+}
+
+#AboutMe {
+  text-align: center;
+}
+
+#AboutMe > .header {
+  display: block;
+  font-weight: bold;
+  color: #ff9900;
+  margin: 0 0 1em;
 }
